--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -1,33 +1,33 @@
 {
   "name": "frontend",
-  "version": "1.0.0",
-  "description": "A platform for people sleeping in their vehicles to find overnight parking",
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack",
-    "deploy-firebase": "firebase deploy",
-    "deploy": "cd dist && cp ../now.json . && now && now alias && now rm frontend -y --safe"
-  },
-  "license": "MIT",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "acorn": "^6.0.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "axios": "^0.18.0",
     "bulma": "^0.7.2",
-    "bulma-extensions": "^4.0.1",
-    "firebase": "^5.8.0",
-    "moment": "^2.23.0",
+    "http-proxy-middleware": "^0.19.1",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
-    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.7.0",
-    "react-hot-loader": "^4.6.3",
-    "react-map-gl": "^4.0.8",
-    "react-map-gl-geocoder": "^1.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "rxjs": "^6.3.3"
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
-  "devDependencies": {
-    "webpack-boiler": "^0.2.3",
-    "webpack-cli": "^3.2.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "private": true
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
