--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
     "node-sass": "^4.11.0",
     "query-string": "^6.2.0",
@@ -15,6 +16,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
