--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
     "node-sass": "^4.11.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-dropzone": "^8.1.0",
     "react-lazy-hero": "^2.0.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
