--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.6",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "react-tagsinput": "^3.19.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
