--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.9.1",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "classnames": "^2.2.6",
@@ -16,7 +17,8 @@
     "react-lazy-hero": "^2.0.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
+    "reactjs-popup": "^1.3.2",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
