--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "classnames": "^2.2.6",
+    "cloudinary": "^1.13.2",
+    "cloudinary-react": "^1.1.0",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
     "node-sass": "^4.11.0",
@@ -16,7 +18,7 @@
     "react-lazy-hero": "^2.0.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
