--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^2.4.1",
     "react-tagsinput": "^3.19.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
