--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.11.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
+    "react-calendar": "^2.18.1",
     "react-dom": "^16.7.0",
     "react-dropzone": "^8.1.0",
     "react-lazy-hero": "^2.0.0",
