--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
@@ -19,9 +20,9 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
-    "reactjs-popup": "^1.3.2",
     "react-select": "^2.4.1",
     "react-tagsinput": "^3.19.0",
+    "reactjs-popup": "^1.3.2",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
