--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "connect-busboy": "0.0.2",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.6",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
