--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-select": "^2.4.1",
+    "react-tabs": "^3.0.0",
     "react-tagsinput": "^3.19.0",
     "reactjs-popup": "^1.3.2",
     "redux": "^4.0.1",
