--- a/app/frontend/.eslintrc.json
+++ b/app/frontend/.eslintrc.json
@@ -4,6 +4,7 @@
     "es6": true
   },
   "extends": "airbnb",
+  "parser": "babel-eslint",
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
@@ -19,5 +20,7 @@
     "react"
   ],
   "rules": {
+    "template-curly-spacing" : "off",
+    "indent": "off"
   }
 }
