--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -10,6 +10,7 @@
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-calendar": "^2.18.1",
@@ -33,7 +34,7 @@
     "build": "react-scripts build",
     "test": "npm run lint && react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src",
+    "lint": "eslint src --fix",
     "now-build": "react-scripts build"
   },
   "eslintConfig": {
