--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -43,5 +43,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "bulma-steps": "^2.2.1"
+  }
 }
