--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -9,13 +9,14 @@
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-calendar": "^2.18.1",
     "react-dom": "^16.7.0",
     "react-dropzone": "^8.1.0",
     "react-lazy-hero": "^2.0.0",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
