--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.6",
     "multer": "^1.4.1",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "react-tagsinput": "^3.19.0"
