--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
   "author": "ResearchConnect Team",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
@@ -30,7 +31,6 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.6",
     "multer": "^1.4.1",
-    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "react-tagsinput": "^3.19.0"
