--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.6",
     "multer": "^1.4.1",
+    "node-cron": "^2.0.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "react-tagsinput": "^3.19.0"
