--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "connect-busboy": "0.0.2",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.6",
     "multer": "^1.4.1",
     "node-cron": "^2.0.3",
