--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
+    "markdown-it": "^8.4.2",
     "node-sass": "^4.12.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
