--- a/now.json
+++ b/now.json
@@ -16,7 +16,7 @@
       "headers": { "cache-control": "s-maxage=31536000,immutable" },
       "dest": "/app/frontend/static/$1"
     },
-    { "src": "/favicon.ico", "dest": "/app/frontend/favicon.ico" },
+    { "src": "/favicon.png", "dest": "/app/frontend/favicon.png" },
     { "src": "/asset-manifest.json", "dest": "/app/frontend/asset-manifest.json" },
     { "src": "/manifest.json", "dest": "/app/frontend/manifest.json" },
     { "src": "/precache-manifest.(.*)", "dest": "/app/frontend/precache-manifest.$1" },
