--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "bulma": "^0.7.4",
     "classnames": "^2.2.6",
+    "fix-image-rotation": "^2.0.0",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
     "markdown-it": "^8.4.2",
